Fix styles on mobile menu button

--- a/src/components/header-bar/Menu.css
+++ b/src/components/header-bar/Menu.css
@@ -2,7 +2,7 @@
 .bm-burger-button {
   position: relative;
   text-align: center;
-  width: 40px;
+  width: 51px;
 }
 
 /* Position and sizing of clickable cross button */
